WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
120516
Resolve unused parameter warning in FindController.cpp
https://bugs.webkit.org/show_bug.cgi?id=120516
Summary
Resolve unused parameter warning in FindController.cpp
Tamas Czene
Reported
2013-08-30 01:56:24 PDT
Resolve unused parameter warning in FindController.cpp
Attachments
proposed patch
(1.35 KB, patch)
2013-08-30 01:57 PDT
,
Tamas Czene
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tamas Czene
Comment 1
2013-08-30 01:57:56 PDT
Created
attachment 210079
[details]
proposed patch
Darin Adler
Comment 2
2013-08-30 08:00:12 PDT
Comment on
attachment 210079
[details]
proposed patch View in context:
https://bugs.webkit.org/attachment.cgi?id=210079&action=review
> Source/WebKit2/WebProcess/WebPage/FindController.cpp:397 > +void FindController::drawRect(PageOverlay* /*pageOverlay*/, GraphicsContext& graphicsContext, const IntRect& dirtyRect)
Should remove the argument name entirely. There is no information conveyed by a commented-out name that repeats the type.
WebKit Commit Bot
Comment 3
2013-08-30 08:24:22 PDT
Comment on
attachment 210079
[details]
proposed patch Clearing flags on attachment: 210079 Committed
r154883
: <
http://trac.webkit.org/changeset/154883
>
WebKit Commit Bot
Comment 4
2013-08-30 08:24:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug