Resolve unused parameter warning in FindController.cpp https://bugs.webkit.org/show_bug.cgi?id=120516

Patch by Tamas Czene <tczene@inf.u-szeged.hu> on 2013-08-30
Reviewed by Darin Adler.

* WebProcess/WebPage/FindController.cpp:
(WebKit::FindController::drawRect):

Canonical link: https://commits.webkit.org/138511@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154883 268f45cc-cd09-0410-ab3c-d52691b4dbfc